data/derived/comb/progs/unify/prog6986.ml.out
Characters 115-129:
  else test ((f x), false)
            ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
